--- a/WebSample/config/ExamineIndex.config
+++ b/WebSample/config/ExamineIndex.config
@@ -24,8 +24,8 @@ More information and documentation can be found on GitHub: https://github.com/Sh
     <IndexUserFields>
       <add Name="umbracoMemberApproved" />
       <add Name="umbracoMemberLockedOut" />
-      <add Name="umbracoMemberLastLockoutDate" Type="DATETIME" />
-      <add Name="umbracoMemberLastLogin" Type="DATETIME" />
+      <add Name="umbracoMemberLastLockoutDate" />
+      <add Name="umbracoMemberLastLogin" />
       <add Name="umbracoMemberPasswordRetrievalAnswer" />
       <add Name="umbracoMemberPasswordRetrievalQuestion" />
       <add Name="comments" />
@@ -34,7 +34,7 @@ More information and documentation can be found on GitHub: https://github.com/Sh
 
     </IndexUserFields>
   </IndexSet>
-
+    
   <!-- Default Indexset for external searches, this indexes all fields on all types of nodes-->
   <IndexSet SetName="ExternalIndexSet" IndexPath="~/App_Data/TEMP/ExamineIndexes/External/" />
 </ExamineLuceneIndexSets>
