Fixed issue#7 "You have unsaved changes... Popup always appears after switching another tab" Added plugin language files Tweaked filter dropdown menu to only show clear filter if a filter has been applied

--- a/MemberListView/MemberListView.csproj
+++ b/MemberListView/MemberListView.csproj
@@ -252,6 +252,26 @@
     <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\member.edit.controller.js" />
     <Content Include="App_Plugins\MemberManager\backoffice\dialogs\member\member.filter.controller.js" />
     <Content Include="App_Plugins\MemberManager\css\memberListView.css" />
+    <Content Include="App_Plugins\MemberManager\lang\cs.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\da.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\de.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\en-gb.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\en-us.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\es.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\fr.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\he.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\it.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\ja.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\ko.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\nb.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\nl.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\pl.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\pt.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\ru.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\sv.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\tr.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\zh-tw.xml" />
+    <Content Include="App_Plugins\MemberManager\lang\zh.xml" />
     <Content Include="App_Plugins\MemberManager\resources\member.resource.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
